--- a/next-app/src/layouts/header/header.module.scss
+++ b/next-app/src/layouts/header/header.module.scss
@@ -1,52 +1,63 @@
 .header{
     display: flex;
     justify-content: space-around;
-}
-
-.container{
-    display: flex;
     align-items: center;
 
-    &__logo{
-        font-size: 42px;
-        font-weight: 800;
+    .logo{
+        font-size: 30px;
+        font-weight: 900;
     }
 
-    &__form{
+    .form{
         position: relative;
-        &_input{
+        &__input{
             border: 0;
             border-radius: 8px;
             
             background-color: rgb(218, 218, 218);
 
-            height: 26px;
-            width: 200px;
+            width: 346px;
+            height: 42px;
         }
-        &_image{
+        &__image{
             position: absolute;
             left: 1px;
         }
     }
-}
 
-.navigation{
-    ul{
-        list-style: none;
-        display: flex;
-        align-items: center;
-
-        li{
+    .navigation{
+        ul{
+            list-style: none;
             display: flex;
-            justify-content: center;
             align-items: center;
-
-            margin-right: 24px;
-
-            a{
-                text-decoration: none;
-                color: black;
+    
+            li{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+    
+                margin-right: 24px;
+    
+                a{
+                    text-decoration: none;
+                    color: black;
+                }
             }
+        }
+    }
+
+    .interactionBtns{
+        display: flex;
+        
+        div:nth-child(2){
+            margin-right: 10px;
+            margin-left: 10px;
+        }
+        
+        a{
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
     }
 }
