--- a/next-app/src/layouts/header/header.module.scss
+++ b/next-app/src/layouts/header/header.module.scss
@@ -10,18 +10,31 @@
 
     .form{
         position: relative;
+        
         &__input{
             border: 0;
             border-radius: 8px;
+
+            font-size: 18px;
             
             background-color: rgb(218, 218, 218);
 
-            width: 346px;
-            height: 42px;
+            width: 230px;
+            height: 28px;
         }
+
         &__image{
             position: absolute;
-            left: 1px;
+            left: 10px;
+            top: 50%;
+            transform: translate(0, -50%);
+
+            width: 18px;
+            height: 18px;
+        }
+
+        .hide{
+            display: none;
         }
     }
 
@@ -48,16 +61,39 @@
 
     .interactionBtns{
         display: flex;
-        
-        div:nth-child(2){
-            margin-right: 10px;
-            margin-left: 10px;
+        justify-content: space-between;
+
+        width: 80px;
+
+        div:nth-child(1){
+            margin-left: 5px;
         }
-        
+
+        div:nth-child(2){
+            margin-right: 5px;
+        }
+
         a{
             display: flex;
             align-items: center;
             justify-content: center;
         }
+    }
+
+    .loginBtn{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        border-radius: 15px;
+        border: none;
+
+        color: #fff;
+
+        background-color: #000;
+
+        padding: 10px 30px;
+
+        cursor: pointer;
     }
 }
