--- a/next-app/src/layouts/header/header.module.scss
+++ b/next-app/src/layouts/header/header.module.scss
@@ -33,9 +33,10 @@
             height: 18px;
         }
 
-        .hide{
+        &__image.hide{
             display: none;
         }
+
     }
 
     .navigation{
@@ -55,7 +56,82 @@
                     text-decoration: none;
                     color: black;
                 }
+
+                img{
+                    cursor: pointer;
+                }
+
+                .dropdownLang{
+                    height: 120px;
+                    width: 50px;
+                }
+
+                .dropdownProducts{
+                    height: 120px;
+                    width: 80px;
+                }
             }
+        }
+        
+        &__burger{
+            height: 32px;
+            width: 42px;
+            position: relative;
+        
+            cursor: pointer;
+        
+            margin-right: 4px;
+
+            display: none;
+
+            z-index: 1000;
+        }
+        
+        &__burger :first-child{
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 4px;
+            background-color: #000000;
+            transition: 0.5s;
+        }
+
+        &__burger :nth-child(2){
+            position: absolute;
+            top: calc(30px/2 - 2px/2);
+            left: 0;
+            width: 100%;
+            height: 4px;
+            background-color: #000000;
+            transition: 0.5s;
+        }
+        
+        &__burger :last-child{
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 4px;
+            background-color: #000000;
+            transition: 0.5s;
+        }
+        
+        &__burger.active :first-child{
+            transform: rotate(45deg);
+            top: calc(50% - 2px);
+            transition: 0.5s;
+        }
+
+        &__burger.active :nth-child(2){
+            display: none;
+            transition: 0.5s;
+        }
+
+        &__burger.active :last-child{
+            transform: rotate(-45deg);
+            bottom: calc(50% - 1px);
+            transition: 0.5s;
         }
     }
 
@@ -92,8 +168,45 @@
 
         background-color: #000;
 
-        padding: 10px 30px;
+        padding: 10px 24px;
 
         cursor: pointer;
+    }
+}
+
+.dropdown{
+    display: none;
+
+    position: absolute;
+    top: 25px;
+
+    background-color: #000;
+    color: #fff;
+}
+
+
+@media screen and (max-width: 1000px) {
+    .header{
+        .navigation{
+            display: flex;
+            align-items: center;
+            ul{
+                li{
+                    display: none;
+                }
+            }
+
+            &__burger{
+                display: block;
+            }
+        }
+        
+        .interactionBtns{
+            display: none;
+        }
+
+        .loginBtn{
+            display: none;
+        }
     }
 }
