--- a/next-app/src/layouts/header/header.module.scss
+++ b/next-app/src/layouts/header/header.module.scss
@@ -6,6 +6,8 @@
     .logo{
         font-size: 30px;
         font-weight: 900;
+
+        margin-right: 5px;
     }
 
     .form{
@@ -19,7 +21,7 @@
             
             background-color: rgb(218, 218, 218);
 
-            width: 230px;
+            width: 100%;
             height: 28px;
         }
 
@@ -171,6 +173,77 @@
         padding: 10px 24px;
 
         cursor: pointer;
+    }
+
+    .mobileMenu{
+        position: fixed;
+
+        z-index: 999;
+
+        transform: translateX(350vh);
+
+        transition: 0.3s;
+
+        width: 100%;
+        height: 100%;
+
+        background-color: #fff;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        &__nav{
+            width: 100%;
+            ul{
+                list-style: none;
+                padding: 0;
+                margin: 0;
+
+                width: 100%;
+
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+        
+                li{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    margin-bottom: 30px;
+        
+                    a{
+                        text-decoration: none;
+                        color: black;
+
+                        font-size: 24px;
+                    }
+    
+                    img{
+                        cursor: pointer;
+                    }
+    
+                    .dropdownLang{
+                        height: 160px;
+                        width: 60px;
+                    }
+    
+                    .dropdownProducts{
+                        height: 160px;
+                        width: 100px;
+                    }
+                }
+            }
+        }
+    }
+
+    .mobileMenu.active{
+        transform: translateX(0);
+        top: 0;
+        
+        transition: 0.3s;
     }
 }
 
