--- a/next-app/src/layouts/header/header.module.scss
+++ b/next-app/src/layouts/header/header.module.scss
@@ -1,9 +1,16 @@
+
+
 .header{
+    margin-top: 6px;
+
     display: flex;
     justify-content: space-around;
     align-items: center;
 
     .logo{
+        text-decoration: none;
+        color: #000;
+
         font-size: 30px;
         font-weight: 900;
 
@@ -199,14 +206,10 @@
                 padding: 0;
                 margin: 0;
 
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
+                
         
                 li{
                     display: flex;
-                    justify-content: center;
                     align-items: center;
 
                     margin-bottom: 30px;
@@ -232,6 +235,11 @@
                         width: 100px;
                     }
                 }
+                li:nth-child(4){
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
 
             }
         }
@@ -251,7 +259,7 @@
     position: absolute;
     top: 25px;
 
-    background-color: #000;
+    background-color: #707070;
     color: #fff;
 }
 
